# retain-rs

./: .gitignore  Cargo.toml  LICENSE
src/: colorutil.rs  config.rs  filelist.rs  main.rs  manifest.rs
src/encryption/: mod.rs  reader.rs  test.rs  traits.rs  writer.rs
src/subcommands/: clean.rs  configure.rs  encrypt.rs  init.rs  mod.rs  status.rs
src/subcommands/backup/: download.rs  mod.rs  upload.rs
