[package]
name = "retain-rs"
version = "0.1.0"
authors = ["Kongou <kongou@shipfu.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
termcolor = "1.1.0"
clap = "2.33.3"
regex = "1"
walkdir = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"